Made icon containers flexbox, got rid of margin spacing. Fixed icon alignment

--- a/hlx_statics/blocks/columns/columns.css
+++ b/hlx_statics/blocks/columns/columns.css
@@ -92,6 +92,7 @@ main div.second-column {
     width: 50%;
     display: flex;
     flex-direction: column;
+    gap: 1rem;
     justify-content: center;
     text-align: left;
     box-sizing: border-box;
@@ -125,13 +126,9 @@ main div.columns h3.column-header + p {
     margin-top: 0!important;
 }
 
-main div.columns p + p {
-    margin-top: var(--spectrum-global-dimension-size-300);
-    margin-bottom: var(--spectrum-global-dimension-size-300); 
-}
-
-main div.columns div.product-link-container p {
-    margin-top: var(--spectrum-global-dimension-size-300);
+main div.columns  div.second-column div.button-group-container {
+    gap: 2rem;
+    display: flex;
 }
 
 main div.columns div.listing.second-column[data-align="right"]{
@@ -143,16 +140,10 @@ main div.columns div.listing ul {
     text-align: left;
 }
 
-@media screen and (min-width:768px) {
-    main div.columns div.product-link-container p + p {
-        margin-left: var(--spectrum-global-dimension-size-300);
-    }
-}
-
 main div.second-column div.product-link-container {
     display: flex;
     flex-direction: row;
-    gap: 5px;
+    gap: 1rem;
 }
 
 @media screen and (max-width:768px) {
@@ -167,7 +158,7 @@ main div.second-column div.product-link-container {
 main div.second-column div.product-link-container p.icon-container {
     display: flex;
     align-items: center;
-    gap: 5px;
+    gap: 1rem;
 }
 
 main div.second-column div.product-link-container img {
@@ -188,9 +179,6 @@ main div.columns div.product-link-container p.icon-text {
     margin-top: 0px;
     margin-bottom: 0;
     height: 100%;
-}
-main div.second-column div.product-link-container a, p.icon-text {
-    margin-left: var(--spectrum-global-dimension-size-100);
 }
 
 /* metadata: style: center */
